# shanten_rs

./: .gitignore  Cargo.toml  sample.py  setup.py  test_hora.py
src/: dfs.rs  furo.rs  hora.rs  hora_candidate.rs  lib.rs  mentsu.rs  mentsu_tartsu_num.rs  pai.rs  point_datam.rs  shanten_analysis.rs  tenpai_analysis.rs  yaku.rs
